# propgcc

./: .gitignore  COGModeExperiences.md  DraftDocumentationTree.md  LICENSE.txt  LinkerScripts.md  Makefile  ProjectHome.md  PropGccAlphaRelease.md  PropGccBuild.md  PropGccBuildMacOSX.md  PropGccBuildPreReq.md  PropGccDemos.md  PropGccExternalMemory.md  PropGccGUIpluginNotes.md  PropGccGoals.md  PropGccInDepth.md  PropGccLibrary.md  PropGccLoader.md  PropGccLoaderConfig.md  PropGccMaps.md  PropGccMemory.md  PropGccTightMemory.md  PropellerGdbUserGuide.md  README.cross  README.gdb  README.md  README.txt  fix-xcode-warnings.sh  jbuild.sh  jbuild2.sh  propeller-checksum.c  rebuild.sh
binutils/: config.sub  configure  configure.ac  md5.sum
dejagnu/: site.exp
demos/: Makefile  README.txt  license.txt
doc/: C-Standard.html  CMM.txt  Library.html  Memory.html
gcc/: LAST_UPDATED  NEWS  config.sub
gdb/: config.sub  configure  configure.ac
gdbstub/: Makefile  cogdebug.h  gdbinit.propeller  gdbstub.c  kernel.c
ios-bin/: arm-darwin-ar  arm-darwin-as  arm-darwin-g++  arm-darwin-gcc  arm-darwin-ld  arm-darwin-ranlib
ldscripts/: propeller_xmm.ld  xmm.ld  xmm_ram.ld  xmmc.ld  xmmc_ram.ld
lib/: Doxyfile  LIB_LICENSE.txt  Makefile  Makefile.cog  Makefile.incl  build.sh  echo.c  hello.c  libgomp.spec
loader/: Loader.docx  Makefile  README.txt  build.sh  internals.docx  setenv.bat  setenv.cygwin  setenv.linux  setenv.macosx
newlib/src/newlib/libc/sys/propeller/: FdSerial.c  FdSerial.h  FullDuplexSerial_firmware.c  Makefile.am  Makefile.in  access.c  bget.c  bget.h  clock.c  close.c  configure  configure.in  creat.c  crt0_xmm.s  dosfs.c  dup2.c  error_write.c  exec.c  execvp.c  file_close.c  file_io.c  file_read.c  file_unlink.c  file_write.c  fork.c  fstat.c  gettimeofday.c  glue.c  initlib.c  ioctl.c  isatty.c  kill.c  link.c  lseek.c  lstat.c  mallocr.c  open.c  params.c  pipe.c  propdev.h  (+13 more)
p2load/: Makefile
release/: INSTALL.txt  PropGCC.bat  README.txt  README_CYGWIN.txt  README_WINDOWS.txt  VERSION.txt  addpath.bat  demos.sh  libsrc.sh  openspin.linux  openspin.osx  propgcc_v0_1.txt  propgcc_v0_2.txt  propgcc_v0_3.txt  release.sh
spin2cpp/: Changelog.txt  Makefile  expr.c  functions.c  lexer.c  pasm.c  preprocess.c  preprocess.h  spin2cpp.c  (+8 more)
(+1720 files in other folders)
